--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Bitter|Overpass+Mono|Roboto+Slab:700');
+@import url('https://fonts.googleapis.com/css?family=Bitter|Overpass+Mono|Roboto+Slab:700|Oswald:700');
 
 
 body{
-  background-color: grey;
+  background-color: #A19E9C;
 }
 
 #begin{
@@ -30,32 +30,49 @@ body{
 
 .correct{
   position: absolute;
-  top: 25%;
-  left: 33%;
+
   z-index: 100;
 
   color: #4F9D69;
   font-family: 'Roboto Slab', serif;
-  font-size: 125px;
+  font-size: 20vh;  
+}
+.wrong{
+  position: absolute;
+  
+  z-index: 100;
 
+  color: #BC4B51;
+  font-family: 'Roboto Slab', serif;
+  font-size: 20vh;
+}
+
+.twisted{
   -ms-transform: rotate(-30deg); /* IE 9 */
   -webkit-transform: rotate(-30deg); /* Safari 3-8 */
   transform: rotate(-30deg);
 }
 
-.wrong{
-  position: absolute;
-  top: 12%;
-  left: 33%;
-  z-index: 100;
-
-  color: #BC4B51;
-  font-family: 'Roboto Slab', serif;
-  font-size: 150px;
-
+.twistedN{
   -ms-transform: rotate(20deg); /* IE 9 */
   -webkit-transform: rotate(20deg); /* Safari 3-8 */
   transform: rotate(20deg);
+}
+
+.background{
+  position: fixed;
+
+  top: 50%;
+  left: 50%;
+
+  margin-top: -84vw;
+  margin-left: -57vw;
+
+  font-family: 'Oswald', sans-serif;
+  color: #D9D8D7;
+  font-size: 106vw;
+
+  z-index: -10;
 }
 
 /* These pieces of code hide the scrollbar, taken from Stack Overflow, 
